# owl

./: CITATION.cff  README.md  README_ja.md  README_zh.md
examples/: run_litellm.py
owl/: .env_template  webapp.py
restful/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
restful/src/: main.py
restful/src/api/: router.py
restful/src/api/endpoints/: health.py  owl.py
restful/src/config/: settings.py
restful/src/owl/utils/: __init__.py  document_toolkit.py  enhanced_role_playing.py
restful/src/services/: owl.py
